--- a/projects/diagnostic/Cargo.toml
+++ b/projects/diagnostic/Cargo.toml
@@ -12,7 +12,7 @@ exclude = ["assets/**"]
 edition = "2018"
 
 [dependencies]
-serde = { version = "1.0.147", optional = true, features = ["derive"] }
+serde = { version = "1.0.147", features = ["derive"] }
 termcolor = "1.1.3"
 unicode-width = "0.1.10"
 
@@ -26,5 +26,4 @@ structopt = "0.3.26"
 unindent = "0.1.10"
 
 [features]
-serialization = ["serde", "serde/rc"]
 ascii-only = []
