🐣 Support proc-macro

--- a/projects/diagnostic-lsp/Cargo.toml
+++ b/projects/diagnostic-lsp/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "diagnostic-lsp"
-version = "0.0.0"
+version = "0.1.0"
 license = "Apache-2.0"
-authors = ["Markus Westerlind <marwes91@gmail.com>"]
+authors = ["Aster <192607617@qq.com>"]
 description = "Conversions between codespan types and Language Server Protocol types"
 homepage = "https://github.com/brendanzab/codespan"
 repository = "https://github.com/brendanzab/codespan"
@@ -10,6 +10,6 @@ documentation = "https://docs.rs/codespan-lsp"
 edition = "2018"
 
 [dependencies]
-diagnostic = { version = "0.1.0", path = "../diagnostic" }
+diagnostic = { version = "0.1.2", path = "../diagnostic" }
 lsp-types = "0.93.2"
 url = "2.3.1"
