--- a/projects/diagnostic-proc/Cargo.toml
+++ b/projects/diagnostic-proc/Cargo.toml
@@ -15,6 +15,6 @@ proc-macro = true
 [dependencies]
 diagnostic = { version = "0.1.2", path = "../diagnostic" }
 syn = "1.0.103"
+quote = "1.0.21"
 proc-macro2 = "1.0.47"
-proc-macro2-diagnostics = "0.9.1"
 proc-macro-error = "1.0.4"
