--- a/projects/diagnostic-svg/Cargo.toml
+++ b/projects/diagnostic-svg/Cargo.toml
@@ -10,6 +10,9 @@ documentation = "https://docs.rs/codespan-lsp"
 edition = "2018"
 
 [dependencies]
-diagnostic = { version = "0.2.0", path = "../diagnostic" }
 lsp-types = "0.93.2"
 url = "2.3.1"
+
+[dependencies.diagnostic]
+version = "0.3.0"
+path = "../diagnostic"
