--- a/projects/diagnostic-proc/Cargo.toml
+++ b/projects/diagnostic-proc/Cargo.toml
@@ -18,5 +18,5 @@ quote = "1.0.21"
 proc-macro2 = { version = "1.0.47", features = ["span-locations"] }
 
 [dependencies.diagnostic]
-version = "0.3.0"
+#version = "0.3.0"
 path = "../diagnostic"
