--- a/projects/diagnostic/Cargo.toml
+++ b/projects/diagnostic/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "diagnostic"
-version = "0.3.8"
+version = "0.4.1"
 readme = "Readme.md"
 license = "Apache-2.0"
 authors = ["Aster <192607617@qq.com>", "Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
@@ -15,6 +15,7 @@ edition = "2021"
 serde = { version = "1.0.147", features = ["derive"] }
 termcolor = "1.1.3"
 unicode-width = "0.1.10"
+log = "0.4.17"
 
 [dev-dependencies]
 unindent = "0.1.10"
