--- a/projects/diagnostic-simple/Cargo.toml
+++ b/projects/diagnostic-simple/Cargo.toml
@@ -14,6 +14,7 @@ lsp-types = { version = "0.93.2", features = ["proposed"], optional = true }
 peginator = { version = "0.3.0", optional = true }
 ropey = { version = "1.5.0", optional = true }
 num = { version = "0.4.0", optional = true }
+rust_decimal = { version = "1.26.1", optional = true }
 ucd-trie = { version = "0.1.5", optional = true }
 sled = { version = "0.34.7", optional = true }
 serde-binary = { version = "0.4.0", optional = true }
@@ -23,4 +24,4 @@ version = "0.4.1"
 path = "../diagnostic"
 
 [features]
-default = ["peginator"]
+default = ["peginator", "rust_decimal"]
