--- a/projects/diagnostic-simple/Cargo.toml
+++ b/projects/diagnostic-simple/Cargo.toml
@@ -20,8 +20,8 @@ sled = { version = "0.34.7", optional = true }
 serde-binary = { version = "0.4.0", optional = true }
 
 [dependencies.diagnostic]
-version = "0.4.1"
+#version = "0.4.2"
 path = "../diagnostic"
 
 [features]
-default = ["peginator", "rust_decimal"]
+default = []
