--- a/projects/diagnostic-simple/Cargo.toml
+++ b/projects/diagnostic-simple/Cargo.toml
@@ -18,6 +18,7 @@ rust_decimal = { version = "1.26.1", optional = true }
 ucd-trie = { version = "0.1.5", optional = true }
 sled = { version = "0.34.7", optional = true }
 serde-binary = { version = "0.4.0", optional = true }
+winreg = { version = "0.10.1", optional = true }
 
 [dependencies.diagnostic]
 #version = "0.4.2"
