--- a/projects/diagnostic-simple/Cargo.toml
+++ b/projects/diagnostic-simple/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "diagnostic-quick"
-version = "0.0.0"
+version = "0.1.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Quick error type for diagnostic"
 repository = "https://github.com/ygg-lang/yggdrasil-rs"
+documentation = "https://docs.rs/diagnostic-quick"
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
@@ -19,6 +20,7 @@ ucd-trie = { version = "0.1.5", optional = true }
 sled = { version = "0.34.7", optional = true }
 serde-binary = { version = "0.4.0", optional = true }
 winreg = { version = "0.10.1", optional = true }
+tl = { version = "0.7.7", optional = true }
 
 [dependencies.diagnostic]
 #version = "0.4.2"
