--- a/projects/diagnostic-simple/Cargo.toml
+++ b/projects/diagnostic-simple/Cargo.toml
@@ -10,17 +10,25 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
-url = { version = "2.3.1", optional = true }
 lsp-types = { version = "0.93.2", features = ["proposed"], optional = true }
-peginator = { version = "0.4.0", optional = true }
 ropey = { version = "1.5.0", optional = true }
 num = { version = "0.4.0", optional = true }
 rust_decimal = { version = "1.27.0", optional = true }
 ucd-trie = { version = "0.1.5", optional = true }
 sled = { version = "0.34.7", optional = true }
 serde-binary = { version = "0.4.0", optional = true }
-winreg = { version = "0.10.1", optional = true }
+
+# parser
+url = { version = "2.3.1", optional = true }
+peginator = { version = "0.4.0", optional = true }
 tl = { version = "0.7.7", optional = true }
+
+# system
+winreg = { version = "0.10.1", optional = true }
+globset = { version = "0.4.9", optional = true  }
+walkdir = { version = "2.3.2", optional = true }
+async-walkdir = { version = "0.2.0", optional = true }
+
 
 [dependencies.diagnostic]
 version = "0.4.3"
@@ -28,3 +36,6 @@ path = "../diagnostic"
 
 [features]
 default = []
+
+[package.metadata.docs.rs]
+all-features = true
