--- a/projects/diagnostic-simple/Cargo.toml
+++ b/projects/diagnostic-simple/Cargo.toml
@@ -22,6 +22,7 @@ ucd-trie = { version = "0.1.5", optional = true }
 sled = { version = "0.34.7", optional = true }
 serde = { version = "1.0.148", optional = true }
 serde-binary = { version = "0.4.0", optional = true }
+toml = { version = "0.5.9", optional = true }
 
 # parser
 url = { version = "2.3.1", optional = true }
