--- a/projects/diagnostic-simple/Cargo.toml
+++ b/projects/diagnostic-simple/Cargo.toml
@@ -23,6 +23,8 @@ sled = { version = "0.34.7", optional = true }
 serde = { version = "1.0.148", optional = true }
 serde-binary = { version = "0.4.0", optional = true }
 toml = { version = "0.5.9", optional = true }
+serde_json = { version = "1.0.73", optional = true }
+mime = { version = "0.3.16", optional = true }
 
 # parser
 url = { version = "2.3.1", optional = true }
