--- a/projects/diagnostic-simple/Cargo.toml
+++ b/projects/diagnostic-simple/Cargo.toml
@@ -20,27 +20,35 @@ num = { version = "0.4.0", optional = true }
 rust_decimal = { version = "1.27.0", optional = true }
 ucd-trie = { version = "0.1.5", optional = true }
 sled = { version = "0.34.7", optional = true }
+
+# serde
 serde = { version = "1.0.148", optional = true }
-serde-binary = { version = "0.4.0", optional = true }
 toml = { version = "0.5.9", optional = true }
 serde_json = { version = "1.0.73", optional = true }
+serde-binary = { version = "0.4.0", optional = true }
 mime = { version = "0.3.16", optional = true }
 
 # parser
 url = { version = "2.3.1", optional = true }
 peginator = { version = "0.6.0", optional = true }
 tl = { version = "0.7.7", optional = true }
+chrono = { version = "0.4.19", optional = true }
 
 # system
 globset = { version = "0.4.9", optional = true }
 walkdir = { version = "2.3.2", optional = true }
 async-walkdir = { version = "0.2.0", optional = true }
 
+# render
+font-kit = { version = "0.11.0", optional = true }
+pathfinder = { version = "0.6.5", optional = true }
+
+
 [target.'cfg(target_os = "windows")'.dependencies]
 winreg = { version = "0.10.1", optional = true }
 
 [features]
-default = ["serde"]
+default = []
 
 [package.metadata.docs.rs]
 all-features = true
