🐣 Add `image` support for quick-error

--- a/projects/diagnostic-simple/Cargo.toml
+++ b/projects/diagnostic-simple/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "diagnostic-quick"
-version = "0.2.3"
+version = "0.2.5"
 authors = ["Aster <192607617@qq.com>"]
 description = "Quick error type for diagnostic"
 repository = "https://github.com/ygg-lang/yggdrasil-rs"
@@ -42,7 +42,8 @@ async-walkdir = { version = "0.2.0", optional = true }
 # render
 font-kit = { version = "0.11.0", optional = true }
 pathfinder = { version = "0.6.5", optional = true }
-
+image = { version = "0.24.5", optional = true }
+imageproc = { version = "0.23.0", optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winreg = { version = "0.10.1", optional = true }
