--- a/projects/diagnostic-simple/Cargo.toml
+++ b/projects/diagnostic-simple/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "diagnostic-quick"
-version = "0.2.5"
+version = "0.2.6"
 authors = ["Aster <192607617@qq.com>"]
 description = "Quick error type for diagnostic"
 repository = "https://github.com/ygg-lang/yggdrasil-rs"
@@ -22,9 +22,9 @@ ucd-trie = { version = "0.1.5", optional = true }
 sled = { version = "0.34.7", optional = true }
 
 # serde
-serde = { version = "1.0.148", optional = true }
+serde = { version = "1.0.149", features = ["derive"]}
 toml = { version = "0.5.9", optional = true }
-serde_json = { version = "1.0.73", optional = true }
+serde_json = { version = "1.0.89", optional = true }
 serde-binary = { version = "0.4.0", optional = true }
 mime = { version = "0.3.16", optional = true }
 
@@ -32,7 +32,7 @@ mime = { version = "0.3.16", optional = true }
 url = { version = "2.3.1", optional = true }
 peginator = { version = "0.6.0", optional = true }
 tl = { version = "0.7.7", optional = true }
-chrono = { version = "0.4.19", optional = true }
+chrono = { version = "0.4.23", optional = true }
 
 # system
 globset = { version = "0.4.9", optional = true }
