--- a/projects/diagnostic-simple/Cargo.toml
+++ b/projects/diagnostic-simple/Cargo.toml
@@ -1,22 +1,21 @@
 [package]
 name = "diagnostic-quick"
-version = "0.2.7"
+version = "0.3.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Quick error type for diagnostic"
-repository = "https://github.com/ygg-lang/yggdrasil-rs"
+repository = "https://github.com/oovm/diagnostic-rs"
 documentation = "https://docs.rs/diagnostic-quick"
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
 
 [dependencies.diagnostic]
-version = "0.4.3"
+version = "0.5.0"
 path = "../diagnostic"
 
 [dependencies]
 lsp-types = { version = "0.93.2", optional = true }
 ropey = { version = "1.5.0", optional = true }
-num = { version = "0.4.0", optional = true }
 rust_decimal = { version = "1.27.0", optional = true }
 ucd-trie = { version = "0.1.5", optional = true }
 sled = { version = "0.34.7", optional = true }
@@ -28,14 +27,14 @@ serde_json = { version = "1.0.89", optional = true }
 serde-binary = { version = "0.4.0", optional = true }
 
 # parser
-url = { version = "2.3.1", optional = true }
+url = { version = "2.3.1", optional = true, features = ["serde"] }
+num = { version = "0.4.0", optional = true, features = ["serde"] }
+email_address = { version = "0.2.4", optional = true, features = ["serde"] }
+semver = { version = "1.0.14", optional = true, features = ["serde"] }
+mime = { version = "0.3.16", optional = true, features = [] }
 peginator = { version = "0.6.0", optional = true }
 tl = { version = "0.7.7", optional = true }
 chrono = { version = "0.4.23", optional = true }
-#email-parser = { version = "0.5.0", optional = true }
-email_address = { version = "0.2.4", optional = true }
-semver = { version = "1.0.14", optional = true }
-mime = { version = "0.3.16", optional = true }
 
 # system
 globset = { version = "0.4.9", optional = true }
