--- a/projects/validation/Cargo.toml
+++ b/projects/validation/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "validatus"
-version = "0.5.0"
-readme = "Readme.md"
+version = "0.0.0"
+readme = "readme.md"
 license = "Apache-2.0"
-authors = ["Aster <192607617@qq.com>", "Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
+authors = ["Aster <192607617@qq.com>"]
 description = "Beautiful diagnostic reporting for text-based programming languages"
 homepage = "https://github.com/oovm/diagnostic-rs"
 repository = "https://github.com/oovm/diagnostic-rs"
@@ -12,15 +12,11 @@ exclude = ["tests/**"]
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0.163", features = ["derive"] }
-termcolor = "1.2.0"
-unicode-width = "0.1.10"
-log = "0.4.17"
+serde = { version = "1.0.163", optional = true }
 
 [dev-dependencies]
 unindent = "0.2.1"
 
 [features]
 default = []
-nightly = []
-ascii-only = []
+#nightly = []
