--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
         "fmt": "cargo fmt --all",
         "push": "wee test && git push",
         "reset": "git reset Head~ --soft",
-        "u": "cargo upgrade --workspace"
+        "u": "cargo upgrade --offline --incompatible"
     }
 }
