--- a/projects/diagnostic/Cargo.toml
+++ b/projects/diagnostic/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "diagnostic"
-version = "0.5.6"
+version = "0.5.7"
 authors = ["Aster <192607617@qq.com>"]
 description = "Pretty diagnostic report"
 repository = "https://github.com/oovm/diagnostic-rs/tree/dev/projects/diagnostic"
@@ -11,7 +11,7 @@ edition = "2021"
 exclude = ["package.json", "tests/**"]
 
 [dependencies]
-#url = "2.4.1"
+serde = { version = "1.0.180", features = ["derive"], optional = true }
 unicode-width = "0.1.11"
 
 [dev-dependencies]
