--- a/projects/diagnostic-quick/Cargo.toml
+++ b/projects/diagnostic-quick/Cargo.toml
@@ -10,7 +10,7 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies.diagnostic]
-version = "0.5.0"
+#version = "0.5.0"
 path = "../diagnostic"
 
 [dependencies]
