🧨 Replace old lsp-types

--- a/projects/validation/Cargo.toml
+++ b/projects/validation/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "validatus"
-version = "0.0.5"
+version = "0.0.6"
 readme = "readme.md"
 license = "Apache-2.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Validator types, returns multiple tolerable errors at once"
 homepage = "https://github.com/oovm/diagnostic-rs"
 repository = "https://github.com/oovm/diagnostic-rs"
-documentation = "https://docs.rs/diagnostic"
+documentation = "https://docs.rs/validatus"
 exclude = ["tests/**"]
 edition = "2021"
 
