--- a/projects/diagnostic/Cargo.toml
+++ b/projects/diagnostic/Cargo.toml
@@ -15,6 +15,11 @@ url = { version = "2.5.0", features = [], optional = true }
 serde = { version = "1.0.197", features = ["derive"], optional = true }
 unicode-width = "0.1.11"
 
+[dependencies.source-cache]
+version = "0.0.*"
+path = "../source-cache"
+
+
 [dev-dependencies]
 
 [features]
