--- a/projects/diagnostic/Cargo.toml
+++ b/projects/diagnostic/Cargo.toml
@@ -11,7 +11,6 @@ edition = "2021"
 exclude = ["package.json", "tests/**"]
 
 [dependencies]
-url = { version = "2.5.0", features = [], optional = true }
 serde = { version = "1.0.197", features = ["derive"], optional = true }
 unicode-width = "0.1.11"
 
@@ -24,7 +23,7 @@ path = "../source-cache"
 
 [features]
 default = []
-serde = ["dep:serde", "url?/serde"]
+serde = ["dep:serde", "source-cache/serde"]
 
 [package.metadata.docs.rs]
 all-features = true
