--- a/projects/diagnostic/Cargo.toml
+++ b/projects/diagnostic/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "diagnostic"
-version = "0.6.3"
+version = "0.6.4"
 authors = ["Aster <192607617@qq.com>"]
 description = "Pretty diagnostic report"
 repository = "https://github.com/oovm/diagnostic-rs/tree/dev/projects/diagnostic"
@@ -15,8 +15,8 @@ serde = { version = "1.0.197", features = ["derive"], optional = true }
 unicode-width = "0.1.11"
 
 [dependencies.source-cache]
-version = "0.2.1"
-#path = "../source-cache"
+version = "0.2.2"
+path = "../source-cache"
 
 
 [dev-dependencies]
