--- a/projects/diagnostic/Cargo.toml
+++ b/projects/diagnostic/Cargo.toml
@@ -15,8 +15,8 @@ serde = { version = "1.0.197", features = ["derive"], optional = true }
 unicode-width = "0.1.11"
 
 [dependencies.source-cache]
-version = "0.2.2"
-path = "../source-cache"
+version = "0.2.3"
+#path = "../source-cache"
 
 
 [dev-dependencies]
